--- a/index.html
+++ b/index.html
@@ -118,10 +118,12 @@
                     value="true">
                 <label for="topBarEnable" class="enableBtn"></label>
                 <div>
-                    <img id="topBarEnableImg" src="images/topBar/topBarOn.png" alt="topBarOn.png" width="400px" height="470px">
+                    <img id="topBarEnableImg" src="images/topBar/topBarOn.png" alt="topBarOn.png" width="400px"
+                        height="470px">
                 </div>
                 <div>
-                    <img id="topBarDisableImg" src="images/topBar/topBarOff.png" alt="topBarOff.png"width="400px" height="470px">
+                    <img id="topBarDisableImg" src="images/topBar/topBarOff.png" alt="topBarOff.png" width="400px"
+                        height="470px">
                 </div>
             </div>
             <h2 class="section-title">Operator</h2>
@@ -129,21 +131,24 @@
                 <div>
                     <label class="enable" id="operatorEnableText">Enable</label>
                 </div>
-                <input type="checkbox" id="operatorEnable" checked onclick="changeStatus(operatorEnableText, operatorEnable);"
-                    value="true">
+                <input type="checkbox" id="operatorEnable" checked
+                    onclick="changeStatus(operatorEnableText, operatorEnable);" value="true">
                 <label for="operatorEnable" class="enableBtn"></label>
                 <div>
                     <img id="operatorEnableImgIcon" src="/images/operator/atena.png" style="border-radius: 50%;
                     position: absolute; margin: 15px 10px 10px 10px;" width="48px" height="48px">
-                    <img id="operatorEnableImg" src="images/operator/operatorOn.png" alt="operatorOn.png" width="300px" height="150px">
+                    <img id="operatorEnableImg" src="images/operator/operatorOn.png" alt="operatorOn.png" width="300px"
+                        height="150px">
                 </div>
                 <div>
-                    <img id="operatorDisableImg" src="images/operator/operatorOff.png" alt="operatorOff.png" width="300px" height="150px">
+                    <img id="operatorDisableImg" src="images/operator/operatorOff.png" alt="operatorOff.png"
+                        width="300px" height="150px">
                 </div>
                 <div id="insertOperatorUrl">
                     <label for="">URL da Imagem</label>
                     <input class="input-text" type="text" id="operatorImg">
-                    <input type="button" class="buttons" value="Enviar" onclick="sendImageToIcon(operatorEnableImgIcon, operatorImg);">
+                    <input type="button" class="buttons" value="Enviar"
+                        onclick="sendImageToIcon(operatorEnableImgIcon, operatorImg);">
                 </div>
             </div>
             <h2 class="section-title">Customer</h2>
@@ -151,21 +156,24 @@
                 <div>
                     <label class="enable" id="customerEnableText">Enable</label>
                 </div>
-                <input type="checkbox" id="customerEnable" checked onclick="changeStatus(customerEnableText, customerEnable);"
-                    value="true">
+                <input type="checkbox" id="customerEnable" checked
+                    onclick="changeStatus(customerEnableText, customerEnable);" value="true">
                 <label for="customerEnable" class="enableBtn"></label>
                 <div>
                     <img id="customerEnableImgIcon" src="images/customer/default.png" style="border-radius: 50%;
                     position: absolute; margin: 16px 10px 10px 232px;" width="48px" height="48px">
-                    <img id="customerEnableImg" src="/images/customer/customerOn.png" alt="customerOn.png" width="300px" height="150px">
+                    <img id="customerEnableImg" src="/images/customer/customerOn.png" alt="customerOn.png" width="300px"
+                        height="150px">
                 </div>
                 <div>
-                    <img id="customerDisableImg" src="/images/customer/customerOff.png" alt="customerOff.png" width="300px" height="150px">
+                    <img id="customerDisableImg" src="/images/customer/customerOff.png" alt="customerOff.png"
+                        width="300px" height="150px">
                 </div>
                 <div id="insertCustomerUrl">
                     <label for="">URL da Imagem</label>
                     <input class="input-text" type="text" id="customerImg">
-                    <input type="button" class="buttons" value="Enviar" onclick="sendImageToIcon(customerEnableImgIcon, customerImg);">
+                    <input type="button" class="buttons" value="Enviar"
+                        onclick="sendImageToIcon(customerEnableImgIcon, customerImg);">
                 </div>
             </div>
             <h2 class="section-title">Logo</h2>
@@ -179,12 +187,14 @@
                 <div>
                     <img id="logoEnableImgIcon" src="images/screens/logo.png" style="position: absolute;
                      margin: 36px 10px 10px 100px;" style="background-color: aqua;" width="210px" height="66px">
-                    <img id="logoEnableImg" src="images/screens/newChatSession.png" alt="newChatSession.png" width="433px" height="705px">
+                    <img id="logoEnableImg" src="images/screens/newChatSession.png" alt="newChatSession.png"
+                        width="433px" height="705px">
                 </div>
                 <div id="insertLogoUrl">
                     <label for="">URL da Imagem</label>
                     <input class="input-text" type="text" id="logoImg">
-                    <input type="button" class="buttons" value="Enviar" onclick="sendImageToIcon(logoEnableImgIcon, logoImg);">
+                    <input type="button" class="buttons" value="Enviar"
+                        onclick="sendImageToIcon(logoEnableImgIcon, logoImg);">
                 </div>
             </div>
             <h2 class="section-title">Background Images</h2>
@@ -224,7 +234,8 @@
             </div>
             <h2 class="section-title">Contact Medias</h2>
             <div style="display: flex;">
-                <img src="images/mediaContacts/chat_xgen.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/chat_xgen.png" style="align-self: center; margin: 4px;" alt="skype.png"
+                    width="36px" height="36px">
                 <h3>Current Chat</h3>
             </div>
             <div class="section">
@@ -240,7 +251,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/skype.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/skype.png" style="align-self: center; margin: 4px;" alt="skype.png"
+                    width="36px" height="36px">
                 <h3>Skype</h3>
             </div>
             <div class="section">
@@ -248,7 +260,7 @@
                     <label class="enable" id="skypeEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="skypeEnable" checked onclick="changeStatus(skypeEnableText, skypeEnable);"
-                value="true">
+                    value="true">
                 <label for="skypeEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -256,7 +268,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/messengertexto.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/messengertexto.png" style="align-self: center; margin: 4px;"
+                    alt="skype.png" width="36px" height="36px">
                 <h3>Messenger</h3>
             </div>
             <div class="section">
@@ -264,7 +277,7 @@
                     <label class="enable" id="messengerEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="messengerEnable" checked
-                onclick="changeStatus(messengerEnableText, messengerEnable);" value="true">
+                    onclick="changeStatus(messengerEnableText, messengerEnable);" value="true">
                 <label for="messengerEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -272,7 +285,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/telegram.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/telegram.png" style="align-self: center; margin: 4px;" alt="skype.png"
+                    width="36px" height="36px">
                 <h3>Telegram</h3>
             </div>
             <div class="section">
@@ -280,7 +294,7 @@
                     <label class="enable" id="telegramEnableText">Enable</label><br>
                 </div>
                 <input type="checkbox" id="telegramEnable" checked
-                onclick="changeStatus(telegramEnableText, telegramEnable);" value="true">
+                    onclick="changeStatus(telegramEnableText, telegramEnable);" value="true">
                 <label for="telegramEnable" class="enableBtn"></label>
                 <div>
                     <label for="">Link</label>
@@ -288,7 +302,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/whatsapptexto.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/whatsapptexto.png" style="align-self: center; margin: 4px;"
+                    alt="skype.png" width="36px" height="36px">
                 <h3>WhatsApp</h3>
             </div>
             <div class="section">
@@ -304,7 +319,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/apple_business_chat.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/apple_business_chat.png" style="align-self: center; margin: 4px;"
+                    alt="skype.png" width="36px" height="36px">
                 <h3>Apple Business</h3>
             </div>
             <div class="section">
@@ -320,7 +336,8 @@
                 </div>
             </div>
             <div style="display: flex;">
-                <img src="images/mediaContacts/mail.png" style="align-self: center; margin: 4px;" alt="skype.png" width="36px" height="36px">
+                <img src="images/mediaContacts/mail.png" style="align-self: center; margin: 4px;" alt="skype.png"
+                    width="36px" height="36px">
                 <h3>Email</h3>
             </div>
             <div class="section">
@@ -437,7 +454,7 @@
         </div>
     </div>
     <div class="generatorBtn">
-        <input type="button" class="buttons" id="copy" value="Copiar" style="margin: 0 10px;">
+        <input type="button" class="buttons" id="copyButton" value="Copiar" style="margin: 0 10px;">
         <input type="button" class="buttons" id="download" value="Download" style="margin: 0 10px;">
         <input type="button" class="buttons" id="generatorBtn" value="Gerar Arquivo" style="margin: 0 10px;">
     </div>
